fixes top bar having wrong width

--- a/assets/css/src/custom.css
+++ b/assets/css/src/custom.css
@@ -150,7 +150,7 @@ div[data-control='media-manager-crop-tool'] {
             &-inline {
                 @apply md:grid-cols-layout-inline print:grid-cols-1;
 
-                .z-sidemenu {
+                #layout-sidenav-2 {
                     width: 180px;
                 }
             }
